# localize

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  environment.yaml  params.yaml  pyproject.toml  ruff.toml  run_pipelines.sh
reports/: logatec-spring-kfold-knn-summary.json  logatec-spring-kfold-linear-summary.json  logatec-spring-kfold-rforest-summary.json  logatec-spring-kfold-xgbrf-summary.json  logatec-spring-knn-exclude-report.json  logatec-spring-knn-kfold-report.json  logatec-spring-knn-random-report.json  logatec-spring-linear-exclude-report.json  logatec-spring-linear-kfold-report.json  logatec-spring-linear-random-report.json  logatec-spring-random-linear-summary.json  logatec-spring-random-rforest-summary.json  logatec-spring-random-xgb-summary.json  logatec-spring-random-xgbrf-summary.json  logatec-spring-rforest-exclude-report.json  logatec-spring-rforest-kfold-report.json  logatec-spring-rforest-random-report.json  logatec-spring-xgb-exclude-report.json  logatec-spring-xgb-kfold-report.json  logatec-spring-xgb-random-report.json  logatec-spring-xgbrf-exclude-report.json  logatec-spring-xgbrf-random-report.json  logatec-winter-kfold-knn-summary.json  logatec-winter-kfold-linear-summary.json  logatec-winter-kfold-rforest-summary.json  logatec-winter-kfold-xgb-summary.json  logatec-winter-knn-exclude-report.json  logatec-winter-knn-kfold-report.json  logatec-winter-knn-random-report.json  logatec-winter-linear-exclude-report.json  logatec-winter-linear-kfold-report.json  logatec-winter-linear-random-report.json  (+13 more)
(+123 files in other folders)
