[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = 'nancy-localization'
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.0a0"


[tool.setuptools.packages.find]
include = ["src*"]


[tool.ruff]
line-length = 119

output-format = "concise"
target-version = "py311"

[tool.ruff.lint]
ignore-init-module-imports = true

# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
#"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]



[tool.ruff.lint.isort]
#known-first-party = ["src"]
known-local-folder = ["src"]


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10




#[tool.pylint.format]
#max-line-length = "119"
